--- a/recyclecan/pubspec.yaml
+++ b/recyclecan/pubspec.yaml
@@ -80,7 +80,7 @@ flutter:
     - family: Roboto
       fonts:
         - asset: fonts/Roboto-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
+        - asset: fonts/Roboto-Bold.ttf
   #         style: italic
   #   - family: Trajan Pro
   #     fonts:
